--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Detail</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
     <script th:src="@{/js/review/review.js}" defer></script>
 </head>
 <body>
@@ -60,6 +61,10 @@
                           cols="30" rows="1" placeholder="내용작성"></textarea>
             </li>
             <li>
+                <label for="reviewFile">리뷰사진</label>
+                <input type="file" name="reviewFile" id="reviewFile">
+            </li>
+            <li>
                 <input type="button" value="댓글작성" id="ajaxBtn">
             </li>
         </ul>
@@ -77,16 +82,16 @@
                     <input type="hidden" id="upReview" th:value="${review.id}">
                 </li>
                 <input type="button" value="삭제" th:onclick="onDelete([[${review.id}]])">
-                <button type="button" class="reviewUpBtn" value="수정" th:onclick="onUpdate([[${review.id}]])">수정</button>
-                <form th:action="@{/review/up}" method="post" id="upForm">
+                <button type="button" class="reviewUpBtn" data-toggle="collapse" data-target=".multi-collapse-[[${review.id}]]" value="수정" th:onclick="onUpdate([[${review.id}]])">수정</button>
+                <form th:action="@{/review/up/[[${review.id}]]}" method="post" id="upForm" class="collapse multi-collapse-[[${review.id}]]">
                     <div class="form-group">
                     <textarea id="upRv" cols="1000" rows="3" placeholder="내용을 작성하세요." required="required">
                         [[${review.review}]]
                     </textarea>
                     </div>
-                    <input type="hidden" name="reviewId" id="reviewId" th:value="@{review.id}">
-                    <input type="hidden" readonly name="productId"
-                           th:value="${product.id}" id="proId">
+                    <input type="hidden" th:id="reviewId" th:value="@{review.id}">
+                    <input type="hidden" th:value="${review.id}" th:id="reviewId">
+                    <input type="hidden" id="reviewWriter" th:value="${review.reviewWriter}">
                     <button type="button" class="reviewUpBtn" value="찐수정">수정</button>
                 </form>
             </ul>
