--- a/src/main/resources/static/css/common/footer.css
+++ b/src/main/resources/static/css/common/footer.css
@@ -1,4 +1,5 @@
 .footer{
+    margin-top : 40px;
     width: 100%;
     background-color: #CDD4EF;
     border-top: 1px solid rgba(229, 224, 255, 0.669);
