--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,7 +1,77 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+@import url(//fonts.googleapis.com/earlyaccess/hanna.css);
+@font-face {
+    font-family: 'intelone-mono-font-family-regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/intelone-mono-font-family-regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+}
+
 /* .container */
+
+*{
+    margin: 0;
+    padding: 0;
+  }
+  html,body{
+    width: 100%;
+    min-height:100%;
+  }
+  ul,li{
+    list-style: none;
+  }
+  a{
+    text-decoration: none;
+    color: #000;
+  }
+
+ html{
+    scroll-behavior: smooth;
+  }
+
+
+.moveBtn {
+    position: fixed;
+    bottom: 6rem;
+    right: 4rem;
+    width: 4rem;
+    height: 4rem;
+    text-align: center;
+    border-radius: 20%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   }
+
+.moveBtn .moveBtnTop{
+
+    width: 75px;
+    height: 35px;
+    border-radius: 150px 150px 0 0;
+
+    border: 1px solid #8C9CDB;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+
+
+
+}
+
+.moveBtn .moveBtnBotton{
+
+    width: 75px;
+    height: 35px;
+    border-radius: 0 0 150px 150px;
+
+    border: 1px solid #8C9CDB;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+
+}
+
 .container{
     width: 100%;
 }
@@ -13,6 +83,9 @@
 }
 .container .index .index-con .sections{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .container .index .index-con .sections .section.sec1{
     width: 100%;
@@ -28,80 +101,117 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 30px;  
+    font-size: 30px;
     color: #ffffff;;
     /* background: url(/images/sec1Bg_0.jpg) no-repeat 50%/cover; */
   }
-  .container .index .index-con .sections .section-sec2{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  .container .index .index-con .sections .section-sec2 .con{
-    flex-basis: 1600px;
-    /* border: 1px solid; */
-    box-sizing: border-box;
-    padding: 20px 0;
-  }
-  .container .index .index-con .sections .section.sec2 .con .sub1{
-    padding: 10px;
-    box-sizing: border-box;
-    /* border: 1px solid #555555; */
-  }
-  .container .index .index-con .sections .section.sec2 .con .sub1>ul{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2,minmax(150px, auto));
-    grid-auto-rows: minmax(150px, auto);
-    gap: 10px;
-  }
-  .container .index .index-con .sections .section.sec2 .con .sub1>ul>li{
-    box-shadow: 1px 1px 2px #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #eeeeee;
-    cursor: pointer;
-    transition: all 0.2s;
-  }
-  .container .index .index-con .sections .section.sec2 .con .sub1>ul>li:hover{
-    background-color: #0ea1b7;
-    color: #ffffff;
-  }
-  /*sub2*/
-  .container .index .index-con .sections .section.sec2 .con .sub2{
-    padding: 10px;
-    box-sizing: border-box;
-    /* border: 1px solid #555555; */
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
+
 
 
   /*메인 섹션 2번쨰*/
 
-  .section-sec2 {
-    width: 100%;
+  .container .index .index-con .sections .section-sec2{
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 50px;
   }
+
   .section-sec2 > ul{
+
      display: grid;
-     grid-template-columns: repeat(5, 1fr);
+     grid-template-columns: repeat(4, 1fr);
      grid-template-rows: repeat(2,minmax(200px, auto));
      grid-auto-rows: minmax(150px, auto);
      gap: 10px;
+     margin-top: 10px;
 
   }
 
   .section-sec2 > ul > li{
       flex-basis: 1600px;
-      border: 1px solid;
       box-sizing: border-box;
-      padding: 20px 0;
-      width: 350px;
-      height: 500px;
+      padding: 20px 10px;
       text-align: center;
+      background-color: white;
+
+      border: 1px solid #8C9CDB;
+      border-radius: 10px;
+      box-sizing: border-box;
+      box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+  }
+
+
+
+  .sections .section-sec2 .sec2-title > span{
+    font-family: 'intelone-mono-font-family-regular';
+    margin-left: 10px;
+  }
+
+  .sections .section-sec2 .sec2-title .title-eng{
+    font-size: 25px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    color: #7286d3;
 
   }
+
+  .sections .section-sec2 .sec2-title .title-kor{
+    font-size: 15px;
+    color: gray;
+  }
+
+
+  .sections .section-sec2 > ul > li > .top-sec{
+
+  }
+
+  .sections .section-sec2 > ul > li > .top-sec > img{
+    border-radius: 10px;
+  }
+
+  .sections .section-sec2 > ul > li > .bottom-sec{
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+
+  }
+
+
+
+  .sections .section-sec2 > ul > li > .bottom-sec > div{
+    font-family: 'intelone-mono-font-family-regular';
+  }
+
+
+
+  .sections .section-sec2 > ul > li > .bottom-sec > .brand{
+
+
+  }
+
+  .sections > .section-sec2 >  ul > li > .bottom-sec .title{
+    font-weight: bolder;
+    font-size: 16px;
+    color: #8EA7E9;
+  }
+
+  .sections .section-sec2 > ul > li > .bottom-sec .description{
+    font-weight: 100;
+    font-size: 14px;
+
+  }
+
+ .sections > .section-sec2 >  ul > li > .bottom-sec .price{
+
+ }
+
+ .sections > .section-sec2 > .section-border{
+    border-bottom: 2px solid #7285d3a4;
+    width: 100%;
+    margin-bottom: 20px;
+ }
 
