--- a/src/main/resources/templates/fragments/common/footer.html
+++ b/src/main/resources/templates/fragments/common/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div class="footer" th:fragment="footerFragment">
+<div id="footer" class="footer" th:fragment="footerFragment">
  <div class="nav">
      <a th:href="@{/}">
         <h2>CLOTH KEEPER</h2>
