글씨 수정 오타 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div id="new" class="section-sec2">
                         <div class="sec2-title">
-                            <span class="title-eng">new Product</span>
+                            <span class="title-eng">New Product</span>
                             <br>
                             <span class="title-kor">신상품</span>
                         </div>
