notice page오류 수정 중

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -6,13 +6,13 @@
     <title>로그인</title>
 </th:block>
 <th:block layout:fragment="css">
-<!--    <link rel="stylesheet" th:href="@{/css/login.css}">-->
+    <link rel="stylesheet" th:href="@{/css/member/login.css}">
 </th:block>
 <th:block layout:fragment="javascript">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/member/tempPasswordLogin.js}" defer="defer"></script>
 </th:block>
-<!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <th:block layout:fragment="container">
     <div class="container">
         <div class="login">
@@ -51,4 +51,5 @@
         </div>
     </div>
 </th:block>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
