--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -59,13 +59,13 @@
         <table>
             <thead>
             <tr>
-                <th>구분</th>
-                <th class="title">제목</th>
-                <th>작성자</th>
-                <th>생성시간</th>
-                <th>수정시간</th>
-                <th>조회수</th>
-                <th>≖‿≖</th>
+                <th width="11%;">구분</th>
+                <th class="title" width="37%;">제목</th>
+                <th width="10%;">작성자</th>
+                <th width="10%;">생성시간</th>
+                <th width="10%;">수정시간</th>
+                <th width="11%;">조회수</th>
+                <th width="11%;">｡◕‿◕｡</th>
             </tr>
             </thead>
             <tbody>
