--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -106,8 +106,8 @@
     padding: 0 10px;
     border-radius: 10%;
     /* background: url("/images/zoom.png") no-repeat; */
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 30px;
 }
 .header .nav .middle-nav .middle-menu ul>li:last-child form input{
    background-color: none;
@@ -136,6 +136,8 @@
  gap: 5px;
 }
 .header .nav .bottom-nav .gnb>ul>li{  
+  display: flex;
+  justify-content: center;
   line-height: 20px;
   font-size: 18px;
  }
@@ -143,12 +145,29 @@
   padding: 5px 10px;
   position: relative;
  }
- .header .nav .bottom-nav .gnb>ul>li:nth-child(1) a{
+ /* 아래 그림자 */
+ /* .header .nav .bottom-nav .gnb>ul>li:nth-child(1) a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  color: #8e7aff;
+  font-size: 20px;
+  text-shadow: 0px 11px 4px #b9adff;
   font-weight: bold;
-  color: #8F7AFF;
+ } */
+ .header .nav .bottom-nav .gnb>ul>li:nth-child(1) a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* line-height: 1; */
+    color: #8e7aff;
+    font-size: 20px;
+    text-shadow: 4px 0px 3px #b9adff;
+    font-weight: bold;
  }
  /* 마우스 올리면 밑줄 생성 */
-.header .nav .bottom-nav .gnb >ul>li>a::after{
+.header .nav .bottom-nav .gnb >ul>li>a::after:not(.main){
     content: '';
     display: block;
     width: 100%;
@@ -161,7 +180,7 @@
     opacity: 0;
     transition: all 0.1s;
 }
-.header .nav .bottom-nav .gnb >ul>li>a:hover::after{
+.header .nav .bottom-nav .gnb >ul>li>a:hover::after:not(.main){
     height: 2px;
     position: absolute;
     left: 0;
