--- a/src/main/resources/static/css/notice/detail.css
+++ b/src/main/resources/static/css/notice/detail.css
@@ -1,9 +1,11 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+/* .conatiner */
 .container{
     width: 100%;
 }
+/* .container > .deatil */
 .container .detail{
     width: 100%;
     display: flex;
@@ -13,7 +15,7 @@
     box-sizing: border-box;
 }
 .container .detail .detail-con{
-    flex-basis: 1000px;
+    flex-basis: 1300px;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
@@ -64,11 +66,12 @@
 }
 .container .detail .detail-con .board-con>ul>li span{
     empty-cells: hide;
-    line-height: 20px;
+    line-height: 3n0px;
     padding: 5px 10px;
     text-align: center;
 }
 .container .detail .detail-con .board-con>ul>li span:nth-child(1){
+    width: 200px;
     flex:1;
     background-color: #C7D3F4;
     font-size: 15px;
