--- a/src/main/resources/static/css/notice/searchlist.css
+++ b/src/main/resources/static/css/notice/searchlist.css
@@ -1,5 +1,5 @@
 @import url(/css/common/reset.css);
-@import url(/css/common/cream_header.css);
+@import url(/css/common/header.css);
 @import url(/css/common/footer.css);
 .List{
     width: 100%;
@@ -29,6 +29,54 @@
     border-top: none;
     border-bottom: 2px solid #7286D3;
 }
+.List .List-con .search{
+    padding: 0 0 0 10px;
+    box-sizing: border-box;
+    justify-content: center;
+    /* line-height: 20px; */
+}
+.List .List-con .search .form{
+    margin: auto;
+    text-align: center;
+}
+.List .List-con .search form{
+    width: 700px;
+    border: 1px solid #7285d3;
+    border-radius: 10px;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    /* gap: 10px; */
+    box-sizing: border-box;
+    /* box-shadow: 2px #cccccc; */
+}
+.List .List-con .search form .select{
+    width: 200px;
+    border-radius: 10px;
+    border: none;
+    /* padding: 1px; */
+    font-size: 15px;
+    text-align: center;
+}
+.List .List-con .search form .select:focus{
+
+}
+.List .List-con .search form input:focus{
+    outline: none;
+}
+.List .List-con .search form input:nth-child(1){
+    flex: 5;
+    border: 0;
+    padding: 0 0 0 10px;
+}
+.List .List-con .search form input:nth-child(2){
+    flex: 1;
+    border: 0;
+    padding: 0 10px;
+    border-radius: 10%;
+    width: 25px;
+    height: 25px;
+}
 .List .List-con .type{
     display: flex;
     box-sizing: border-box;
@@ -47,19 +95,27 @@
     height: 50px;
     display: flex;
     flex: 2;
-    justify-content: space-between;
     text-align: center;
     padding: 10px;
-    border: 1px solid #cccccc;
-    border-radius: 20px;
+    border: 1px solid #8C9CDB;
+    border-radius: 10px;
     box-sizing: border-box;
-    box-shadow: 5px #cccccc;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.List .List-con .type >ul>li span{
+    gap: 5px;
+    vertical-align: middle;
+    display: table-cell;
+    padding: 20px;
+    text-align: center;
     align-items: center;
 }
 .List .List-con .type >ul>li a{
-  font-size:25px;
-  font-weight:bold;
-  align-items: center;
+    font-size:20px;
+    align-items: center;
 }
 table, th, td{
     border-collapse: collapse;
