--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -70,8 +70,8 @@
                         <li><a th:href="@{/inquiry/list}">문의하기</a></li>
                     </th:block>
                     <th:block sec:authorize="isAnonymous()">
-                        <li><a th:href="@{/login}">로그인</a></li>
-                        <li><a th:href="@{/join}">회원가입</a></li>
+                        <li><a th:href="@{/member/login}">로그인</a></li>
+                        <li><a th:href="@{/member/join}">회원가입</a></li>
                     </th:block>
                     <th:block sec:authorize="hasAnyRole('ADMIN')">
                         <li><a th:href="@{/admin/detail}">관리자페이지</a></li>
@@ -111,7 +111,7 @@
         <div class="bottom-nav">
             <div class="gnb">
                 <ul>
-                    <li><a th:href="@{/}">Cloth Keeper</a></li>
+                    <li><a th:href="@{/}" class="main">Cloth Keeper</a></li>
                     <li><a th:href="@{/}">1</a></li>
                     <!--                    조회순으로-->
                     <li><a th:href="@{/}">2</a></li>
